# TribalScript

./: .gitignore  CMakeLists.txt  LICENSE  README.md  Torque.g4  annotated.html  ast_8hpp_source.html  astbuilder_8hpp_source.html  astvisitor_8hpp_source.html  builtins_8hpp_source.html  classTorqueScript_1_1AST_1_1ASTBuilder-members.html  classTorqueScript_1_1AST_1_1ASTBuilder.html  classTorqueScript_1_1AST_1_1ASTBuilder__coll__graph.map  classTorqueScript_1_1AST_1_1ASTBuilder__coll__graph.md5  classTorqueScript_1_1AST_1_1ASTNode-members.html  classTorqueScript_1_1AST_1_1ASTNode.html  classTorqueScript_1_1AST_1_1ASTNode__inherit__graph.map  classTorqueScript_1_1AST_1_1ASTNode__inherit__graph.md5  classTorqueScript_1_1AST_1_1ASTVisitor-members.html  classTorqueScript_1_1AST_1_1ASTVisitor.html  classTorqueScript_1_1AST_1_1ASTVisitor__inherit__graph.map  classTorqueScript_1_1AST_1_1ASTVisitor__inherit__graph.md5  classTorqueScript_1_1AST_1_1AddNode-members.html  classTorqueScript_1_1AST_1_1AddNode.html  classTorqueScript_1_1AST_1_1AddNode__coll__graph.map  classTorqueScript_1_1AST_1_1AddNode__coll__graph.md5  classTorqueScript_1_1AST_1_1AddNode__inherit__graph.map  classTorqueScript_1_1AST_1_1AddNode__inherit__graph.md5  classTorqueScript_1_1AST_1_1ArrayNode-members.html  classTorqueScript_1_1AST_1_1ArrayNode.html  classTorqueScript_1_1AST_1_1ArrayNode__coll__graph.map  classTorqueScript_1_1AST_1_1ArrayNode__coll__graph.md5  classTorqueScript_1_1AST_1_1ArrayNode__inherit__graph.map  classTorqueScript_1_1AST_1_1ArrayNode__inherit__graph.md5  classTorqueScript_1_1AST_1_1AssignmentNode-members.html  classTorqueScript_1_1AST_1_1AssignmentNode.html  classTorqueScript_1_1AST_1_1AssignmentNode__coll__graph.map  classTorqueScript_1_1AST_1_1AssignmentNode__coll__graph.md5  classTorqueScript_1_1AST_1_1AssignmentNode__inherit__graph.map  classTorqueScript_1_1AST_1_1AssignmentNode__inherit__graph.md5  (+680 more)
compiler/: CMakeLists.txt  Torque.g4  bitstream.cpp  compiler.cpp  compiler.h  doxymain.h  interpreter.cpp
compiler/examples/: combined.cs  globals.cs  if.cs  locals.cs  while.cs
compiler/include/torquescript/compiler/: bitstream.h  codeblock.h  codeblock.hpp  compiler.h  compiler.hpp  instructions.h  instructions.hpp  interpreter.hpp
examples/: datablocks.cs  interpreterInit.cpp  object.cs
include/torquescript/: ast.hpp  astbuilder.hpp  astvisitor.hpp  builtins.hpp  codeblock.hpp  codecontainer.hpp  compiler.hpp  compilervisitor.hpp  consoleobject.hpp  consoleobjectregistry.hpp  consoleobjectregistrybase.hpp  executionscope.hpp  executionstate.hpp  filehandlebase.hpp  fileobject.hpp  function.hpp  functionregistry.hpp  instruction.hpp  instructions.hpp  instructionsequence.hpp  interpreter.hpp  interpreterconfiguration.hpp  nativefunction.hpp  parsererrorlistener.hpp  platformcontext.hpp  ringbuffer.hpp  simobject.hpp  simobjectregistry.hpp  standardconsoleobjectregistry.hpp  standardfilehandle.hpp  storedfieldreferencevalue.hpp  storedfloatvalue.hpp  storedglobalreferencevalue.hpp  storedintegervalue.hpp  storedlocalreferencevalue.hpp  storedstringvalue.hpp  storedvalue.hpp  storedvaluereference.hpp  storedvaluestack.hpp  storedvariable.hpp  (+2 more)
include/tribalscript/: ast.hpp  astbuilder.hpp  astvisitor.hpp  codeblock.hpp  compiler.hpp  consoleobject.hpp  consoleobjectregistrybase.hpp  executionscope.hpp  executionstate.hpp  filehandlebase.hpp  fileobject.hpp  function.hpp  functionregistry.hpp  instructions.hpp  instructionsequence.hpp  interpreter.hpp  interpreterconfiguration.hpp  nativefunction.hpp  parsererrorlistener.hpp  platformcontext.hpp  scriptobject.hpp  simgroup.hpp  simset.hpp  standardconsoleobjectregistry.hpp  standardfilehandle.hpp  storedvalue.hpp  storedvaluestack.hpp  stringhelpers.hpp  stringtable.hpp
parser/: Torque.g4
parser/examples/: combined.cs  for.cs  (+2 more)
scripts/: torquePerfFramework.cs
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_10.js  classes_11.js  classes_12.js  classes_13.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  classes_c.js  classes_d.js  classes_e.js  classes_f.js  (+19 more)
source/: CMakeLists.txt  Torque.g4  Torque3D.g4  Tribes2.g4  astbuilder.cpp  astvisitor.cpp  bitstream.cpp  codeblock.cpp  compiler.cpp  compilervisitor.cpp  consoleobject.cpp  consoleobjectregistry.cpp  doxymain.h  executionscope.cpp  filehandlebase.cpp  fileobject.cpp  function.cpp  instructionsequence.cpp  interpreter.cpp  main.cpp  nativefunction.cpp  parsererrorlistener.cpp  platformcontext.cpp  scriptobject.cpp  simgroup.cpp  simobject.cpp  simobjectregistry.cpp  simset.cpp  standardconsoleobjectregistry.cpp  standardfilehandle.cpp  storedfieldreferencevalue.cpp  storedfloatvalue.cpp  storedglobalreferencevalue.cpp  storedintegervalue.cpp  storedlocalreferencevalue.cpp  storedstringvalue.cpp  storedvalue.cpp  storedvaluereference.cpp  storedvaluestack.cpp  stringhelpers.cpp  (+1 more)
source/examples/: for.cs  switch.cs
source/include/torquescript/compiler/: bitstream.hpp  executionscope.hpp  instructions.hpp  stringhelpers.hpp
source/libraries/: core.cpp  fileobject.cpp  math.cpp  scriptobject.cpp  simgroup.cpp  simset.cpp  string.cpp
tests/: CMakeLists.txt  array.cpp  bitstream.cpp  break.cpp  breakFor.cpp  breakWhile.cpp  caseSensitive.cpp  chaining.cpp  combined.cpp  continue.cpp  continueFor.cpp  continueWhile.cpp  for.cpp  function.cpp  if.cpp  interpreter.cpp  memoryReference.cpp  nestedBreakFor.cpp  nestedBreakWhile.cpp  nestedContinue.cpp  nestedContinueFor.cpp  nestedContinueWhile.cpp  opOrder.cpp  package.cpp  scriptObject.cpp  simGroup.cpp  stringhelpers.cpp  switch.cpp  treeInitialization.cpp  variables.cpp  while.cpp
tests/cases/: break.cs  breakWhile.cs  continue.cs  for.cs  memoryReference.cs  package.cs  switch.cs  treeInitialization.cs
tools/: torquePerfFramework.cs
(+12 files in other folders)
