include(FetchContent)
FetchContent_Declare(
    googletest
    # Specify the commit you depend on and update it regularly.
    URL https://github.com/google/googletest/archive/609281088cfefc76f9d0ce82e1ff6c30cc3591e5.zip
)

# For Windows: Prevent overriding the parent project's compiler/linker settings
set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
FetchContent_MakeAvailable(googletest)

# Init all tests
add_executable(InterpreterTest interpreter.cpp)
target_link_libraries(InterpreterTest TorqueCompiler gtest_main)
add_test(NAME InterpreterTest COMMAND InterpreterTest)
